Feature/lws 88 boosting (#1531)
* Implement boosting in "new" search

* Don't reshape Elastic result inside query method

* Enable optional ES score debug info in "old" API (+ unintentional formatting)

* Enable optional ES score debug info in new API

* Add records over cache records boost

* Support custom boosting via api param _boost

* Bugfix: Don't let subpaths block full paths from being added as boost field

* Add unit test